--- a/ÁBRAHÁM_LEILA_GAMER/stilus.css
+++ b/ÁBRAHÁM_LEILA_GAMER/stilus.css
@@ -1,17 +1,89 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body{
-   padding: 0%;
-   margin: 0%;
-   background-image: url(kepek/black.png);
+body {
+  padding: 0%;
+  margin: 0%;
+  background-image: url(kepek/black.png);
 }
-main{
-    font-family: 'Arial', Verdana, sans-serif;
-    color: beige;
-    font-size: 10pt;
-    width: 90%;
-    max-width: 900px;
-    margin: auto;
-    background-color: rgb(165, 161, 161);
+main {
+  font-family: "Arial", Verdana, sans-serif;
+  color: beige;
+  font-size: 10pt;
+  width: 90%;
+  max-width: 900px;
+  margin: auto;
+  background-color: rgb(165, 161, 161);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas:
+    "h h"
+    "n n"
+    "a as"
+    "f f";
+}
+
+header {
+  background-image: url(kepek/game.jpg);
+  height: 300px;
+  background-size: cover;
+  grid-area: h;
+}
+nav{
+  grid-area: n;
+}
+#menu ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+nav li {
+  list-style-type: none;
+}
+nav a {
+  font-weight: bold;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: orange;
+}
+aside {
+  grid-area: as;
+  padding: 5px;
+}
+article {
+  text-align: justify;
+  font-size: 10px;
+  grid-area: a;
+  padding: 5px;
+}
+#info{
+    list-style: square;
+}
+.cim {
+  font-size: 15px;
+}
+.kep {
+  width: 100%;
+  float: right;
+}
+footer {
+  grid-area: f;
+  text-align: center;
+  background-color: yellow;
+  color: black;
+}
+
+@media only screen and (max-width: 700px) {
+  main {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "h"
+      "n"
+      "a"
+      "as"
+      "f";
+  }
+  #menu ul{
+    grid-template-columns: 1fr;
+  }
 }
